<resources>
    <string name="app_name">KaistTaxi</string>
    <string name="title">KAIST Taxi</string>
    <string name="welcome">카이스트 무인택시에 탑승하신 것을 환영합니다.</string>
    <string name="belt">안전한 운행을 위해 안전벨트를 착용해주세요.</string>
    <string name="ready">안전한 탑승이 확인되었습니다.</string>
    <string name="depart">승차지 : 카이스트 교육지원동 앞 정류장</string>
    <string name="destination1">하차지 : 대전시민천문대 입구</string>
    <string name="destination2">하차지 : 카이스트 교수회관 앞</string>
    <string name="moving">이동중입니다.</string>
    <string name="change">목적지 변경하기</string>
    <string name="cancel">취소</string>

    <string name="howto1">목적지 변경을 원하실 경우,</string>
    <string name="howto2">\"목적지 변경\"이라고 말씀해주세요.</string>
    <string name="whereto">목적지를 어디로 변경하시겠습니까?</string>
    <string name="example">예: \"투썸플레이스로 가줘\"</string>
    <string name="sorryagain">죄송합니다. 제공하지 않는 기능입니다.</string>
    <string name="sorryagain2">변경가능 목적지: 투썸플레이스 대전카이스트점</string>
    <string name="scanning">인식중</string>
    <string name="scanned">"투썸플레이스 대전카이스트점"</string>

    <string name="changed">선택하신 목적지의 무인택시 정류장으로 하차지가 변경되었습니다.</string>
    <string name="changed_to">변경된 목적지 : </string>
    <string name="changed_where"> 투썸플레이스 \n대전카이스트점</string>
    <string name="force">실험을 위해 목적지가 강제로 변경됩니다.</string>

    <string name="soon">곧 도착 예정입니다.</string>
    <string name="bye">하차지에 도착하였습니다.</string>
    <string name="thanks">카이스트 무인택시를 이용해 주셔서 감사합니다.</string>
    <string name="info">이용내역 안내</string>
    <string name="price">이용금액: 3,000원</string>
    <string name="distance">이동거리: 2.3km</string>
    <string name="edit">목적지 변경</string>
    <string name="new_destination">새로운 목적지를 입력해주세요.</string>
    <string name="enter_new">변경할 목적지를 입력해주세요.</string>
    <string name="confirm_new">목적지를 변경하시겠습니까?</string>
    <string name="limit_change">본 실험에서는 \'투썸플레이스 대전카이스트점\'로만 목적지를 변경하실 수 있습니다.</string>
</resources>
