<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:padding="30dp"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="60dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/bye"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/thanks"
            android:textColor="@android:color/black"
            android:textAlignment="center" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/goodbye"
            android:textAlignment="center"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp">

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/info"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/price"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1" />
                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/distance"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent" />
</RelativeLayout>
