<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:padding="30dp"
        >
    <RelativeLayout
        android:id="@+id/box_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="20dp">
        <ImageView
            android:id="@+id/safetybelt"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/destination_1" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/box_text"
        android:layout_toRightOf="@id/box_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center">
        <LinearLayout
            android:id="@+id/box_text_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/depart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/depart"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/destination1"
                android:textColor="@android:color/black" />


        </LinearLayout>
        <RelativeLayout
            android:layout_below="@+id/box_text_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"

                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/soon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soon"
                    android:textSize="40dp" />
                <ImageView
                    android:layout_below="@+id/soon"
                    android:layout_height="wrap_content"
                    android:layout_width="80dp"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/finish" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent" />
</RelativeLayout>
